# Local-Intilligance

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: exclusions.rs  files.rs  folders.rs  indexing.rs  mod.rs  search.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crawler/: mod.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/indexer/: fingerprint.rs  mod.rs
src-tauri/src/parser/: docx_parser.rs  mod.rs  pdf_parser.rs  text_parser.rs
src-tauri/src/search/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: ExclusionList.tsx  FolderList.tsx  Layout.tsx  SearchBar.tsx  SearchFilters.tsx  SearchResultItem.tsx  StatusPanel.tsx
src/lib/: commands.ts  events.ts  utils.ts
src/pages/: SearchPage.tsx  SettingsPage.tsx
