[package]
name = "local-file-intelligence"
version = "0.1.0"
description = "Local file indexing and search desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "local_file_intelligence_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-full"] }
notify = "7"
notify-debouncer-full = "0.4"
walkdir = "2"
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.37"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
